add filter on swagger
